# filters

./: CMakeLists.txt  package.xml
include/filters/: filter_base.h  filter_chain.h  increment.h  mean.h
src/: increment.cpp  mean.cpp  median.cpp  test_params.cpp  transfer_function.cpp
