<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>filters</name>
  <version>0.0.3</version>
  <description>Filters for ROS2 on Window IoT Core.</description>
  <maintainer email="bfjelds@microsoft.com">Brian Fjeldstad</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>class_loader</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>xmlrpcpp</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
